@@ -5,6 +5,7 @@ Changelog:
 - Added subtitle styling options to VideoOSD
 - Added "no subtitle service" check to the subtitle download dialog
 - Added 720p label to VideoPlayer
+- Other minor adjustmens
 
 3.1.1
 - Improved boomarks dialog
